[package]
name = "neo"
version = "0.1.0"
edition = "2021"
authors = ["Kirill Korotkov <personal.gugfug@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A theme for yewlish"
repository = "https://github.com/patchwork-body/yewlish-theme-neo.git"
documentation = "https://docs.rs/yewlish-neo"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.21.0"

[dev-dependencies]
wasm-bindgen-futures = "0.4.42"
wasm-bindgen-test = "0.3.42"
yewlish-testing-tools = "0.1.4"

[features]
checkbox = ["yewlish-checkbox", "yewlish-attr-passer"]
icon = []

[dependencies.yewlish-checkbox]
version = "0.1.5"
optional = true

[dependencies.yewlish-attr-passer]
version = "0.1.1"
optional = true